# asdr

./: .gitignore  CMakeCache.txt  MQP_Ground_RX.grc  readme.txt  top_block.py
MATLAB_Scripts/: Kalman_sim_gps.m  data_manip_masdr.m  energy_detect_masdr.m  gps_vals.mat  gps_vals.txt  matched_filt_masdr.m
MATLAB_scripts/: test_gateway_refined.mat
USRP_code/: realtime-radio.cpp
application/: CMakeLists.txt  README  config.dox  kalman_filt.cpp  kalman_filt.h  lsm303dlhc_driver.c  lsm303dlhc_driver.h  lsm303dlhc_mag.c  makefile  masdr.cpp  masdr.h  utils.cpp  utils.h
drone_code/: masdr_ctrl.py  masdr_rot.py  requirements.txt
iq_to_file/: CMakeLists.txt  data_manip_masdr.m  demod2.m  iq_to_file.cpp
localization/: generate_map.py  gps_vals.txt  gps_vals_urban.txt  map_template.html  test_wyg_data_12-11.mat
report/: acknowledgements.tex  appendix.tex  background.tex  conclusions.tex  executive-summary.tex  glossary.tex  implementation.tex  intro.tex  makefile  masdr.aux  masdr.blg  masdr.lof  masdr.tex  masdr.toc  methods.tex  proposed-approach.tex  references.bib  results.tex
